# chess-puzzle-rating-autoresearch

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: autoresearch_state.json  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: comment_handler_claude_transcript.jsonl  comment_handler_prompt.txt  execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  rule_maker_claude_transcript.jsonl  rule_maker_prompt.txt  session_instructions.txt
logs/experiment-autoresearch/ac978acb9ee12a59c71b898461d3eff42655b11f/attempt_1/: child_pointer.txt  decision.json  proposal.md  proposer_prompt.txt  results.json  whiteboard_snapshot.json
models/: feature_names.json  meta.json
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2409.11506_chess_rating_cnnlstm_manifest.txt  2410.11078_glickformer_puzzle_difficulty_manifest.txt
results/: metrics.json  metrics_seed1.json  preds_test.npz  preds_test_seed1.npz  reproducibility.json
scoring/: eval.py  interface.md  results.json  rule_maker_log.md  targets.json
src/: analyze.py  build_dataset.py  features.py  predict.py  reproducibility.py  train.py
(+43 files in other folders)
