[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for Lichess puzzle rating prediction"
requires-python = ">=3.10"
dependencies = [
    "datasets>=5.0.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pypdf>=6.14.2",
    "python-chess>=1.999",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]
